@@ -1,3 +1,12 @@
+#vt100 a { 
+  text-decoration:  none;
+  color:            inherit;
+}
+
+#vt100 a:hover { 
+  text-decoration:  underline;
+}
+
 #vt100 #reconnect {
   position:         absolute;
   z-index:          2;
